--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "inline-source-cli": "^1.2.0",
-    "jasmine-node": "^2.0.0",
-    "rewire": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0"
   },
   "dependencies": {}
