--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-string-replace-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0"
   },
