--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ear-training",
-  "version": "1.0.5",
+  "name": "ear-training-buddy",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
