--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": "https://github.com/pianosnake/ear-training-buddy",
   "devDependencies": {
     "html-string-replace-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^2.30.1",
