--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ear-training-buddy",
   "version": "1.0.7",
-  "description": "",
+  "description": "Ear training web app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
