--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "repository": "https://github.com/pianosnake/ear-training-buddy",
   "devDependencies": {
+    "jasmine-core": "^3.3.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   },
