--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ear training web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Check /tests in a browser\" && exit 1",
     "build": "webpack"
   },
   "author": "",
